--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -418,30 +418,31 @@
                 <div class="row">
                   <div class="col-xs-18 col-sm-6 col-md-4">
                     <div class="thumbnail">
-                    <img src="images/1.jpg" alt="">
+                    <img src='<%=@image[0][0]%>' alt="">
                       <div class="caption text-center">
-                      <h4>Video Post</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                      <h4><%=@title[0]%></h4>
+                      <p><%=@description[0]%></p>
                       <p><a href="#" class="" >readmore</a></p>
                     </div>
                     </div>
                   </div>
                   <div class="col-xs-18 col-sm-6 col-md-4">
                     <div class="thumbnail">
-                    <img src="images/2.jpg" alt="">
+                    <img src='<%=@image[1][0]%>' alt="">
                       <div class="caption text-center">
-                      <h4>Quote Post</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                      <h4><%=@title[1]%></h4>
+                      <p><%=@description[1]%></p>
                       <p><a href="#" class="" >readmore</a></p>
                     </div>
                     </div>
                   </div>
                   <div class="col-xs-18 col-sm-6 col-md-4">
                     <div class="thumbnail">
-                    <img src="images/3.jpg" alt="">
+                    <img src='<%=@image[2][0]%>' alt="">
+                    
                       <div class="caption text-center">
-                      <h4>Audio Post</h4>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, soluta, eligendi doloribus sunt minus amet sit debitis repellat. Consectetur, culpa itaque odio similique suscipit</p>
+                      <h4><%=@title[2]%></h4>
+                      <p><%=@description[2]%></p>
                       <p><a href="#" class="">readmore</a></p>
                     </div>
                     </div>
