--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -79,6 +79,7 @@
       <div class="navigation-wrapper">
 
           <!-- logo - you can put yours here -->
+          
           <%= link_to root_path, class: :logo do %>
             <%= image_tag "logo.png" %>
           <% end %>
@@ -530,7 +531,7 @@
               
             </div><!--.carousel-inner-->
           </div><!--.Carousel-->
-             <div class="text-center allpostsbtn"><a href="/blog" class="btn btn-success">VIEW ALL POSTS</a></div>
+             <div class="text-center allpostsbtn"><a href="http://harvestprofit.brilliancetechsols.com/blog" class="btn btn-success">VIEW ALL POSTS</a></div>
         </div>
       </div>
     </div>
