--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -419,7 +419,7 @@
                       <img src='<%=@image[0][0]%>' alt="" height="230">
                       </div>
                       <div class="caption text-center">
-                      <h4><%=@title[0]%></h4>
+                      <h4><%= truncate @title[0], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[0], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[0]%>" class="" >readmore</a></p>
                     </div>
@@ -431,7 +431,7 @@
                     <img src='<%=@image[1][1]%>' alt="" height="230">
                       </div>
                       <div class="caption text-center">
-                      <h4><%=@title[1]%></h4>
+                      <h4><%= truncate @title[1], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[1], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[1]%>" class="" >readmore</a></p>
                     </div>
@@ -443,7 +443,7 @@
                     <img src='<%=@image[2][2]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[2]%></h4>
+                      <h4><%= truncate @title[2], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[2], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[2]%>" class="">readmore</a></p>
                     </div>
@@ -459,7 +459,7 @@
                     <img src='<%=@image[3][3]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[3]%></h4>
+                      <h4><%= truncate @title[3], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[3], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[3]%>" class="">readmore</a></p>
                     </div>
@@ -471,7 +471,7 @@
                     <img src='<%=@image[4][4]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[4]%></h4>
+                      <h4><%= truncate @title[4], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[4], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[4]%>" class="">readmore</a></p>
                     </div>
@@ -483,7 +483,7 @@
                     <img src='<%=@image[5][5]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[5]%></h4>
+                      <h4><%= truncate @title[5], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[5], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[5]%>" class="">readmore</a></p>
                     </div>
@@ -499,7 +499,7 @@
                     <img src='<%=@image[6][6]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[6]%></h4>
+                      <h4><%= truncate @title[6], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[6], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[6]%>" class="">readmore</a></p>
                     </div>
@@ -511,7 +511,7 @@
                     <img src='<%=@image[7][7]%>' alt="" height="230">
                     </div>
                       <div class="caption text-center">
-                      <h4><%=@title[7]%></h4>
+                      <h4><%= truncate @title[7], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[7], :length   => 89, :separator => /\w/%></p>
                       <p><a href="<%=@link[7]%>" class="">readmore</a></p>
                     </div>
@@ -522,7 +522,7 @@
                     <div class="carousel-image">
                     <img src="<%=@image[8][8]%>" alt=""></div>
                       <div class="caption text-center">
-                      <h4><%=@title[8]%></h4>
+                      <h4><%= truncate @title[8], :length   => 20, :separator => /\w/ %></h4>
                       <p><%= truncate @description[8], :length   => 89, :separator => /\w/%></p>
                       <p><a href="#" class="">readmore</a></p>
                     </div>
